--- a/index.html
+++ b/index.html
@@ -21,21 +21,42 @@
         </tr>
       </thead>
       <tr>
-        <td>No trades today</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>No trades today</td>
-        <td></td>
-        <td></td>
+        <td>D1S</td>
+        <td>GER40</td>
+        <td>Sell</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td>Updated 26-Oct-2025 at 11:32 GMT</td>
+        <td>D1S</td>
+        <td>USDCHF</td>
+        <td>Buy</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURUSD</td>
+        <td>Sell</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>NZDCAD</td>
+        <td>Sell</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>USDCHF</td>
+        <td>Buy</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Updated 29-Oct-2025 at 19:30 GMT</td>
         <td></td>
         <td></td>
         <td></td>
