--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <th>Type</th>
           <th>Symbol</th>
           <th>Buy or Sell</th>
-          <th>Limit</th>
+          <th>Target</th>
           <th>Stop</th>
         </tr>
       </thead>
@@ -24,45 +24,39 @@
         <td>D1S</td>
         <td>GER40</td>
         <td>Sell</td>
-        <td></td>
-        <td></td>
+        <td>302</td>
+        <td>107</td>
       </tr>
       <tr>
         <td>D1S</td>
         <td>USDCHF</td>
         <td>Buy</td>
-        <td></td>
-        <td></td>
+        <td>50</td>
+        <td>54</td>
       </tr>
       <tr>
         <td>D1A</td>
         <td>EURUSD</td>
         <td>Sell</td>
-        <td></td>
-        <td></td>
+        <td>80</td>
+        <td>71</td>
       </tr>
       <tr>
         <td>D1A</td>
         <td>NZDCAD</td>
         <td>Sell</td>
-        <td></td>
-        <td></td>
+        <td>50</td>
+        <td>53</td>
       </tr>
       <tr>
         <td>D1A</td>
         <td>USDCHF</td>
         <td>Buy</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Updated 29-Oct-2025 at 19:30 GMT</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>70</td>
+        <td>56</td>
       </tr>
     </table>
+	<p>Updated 29-Oct-2025 at 19:26 GMT</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin=
   "anonymous"></script>
