--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped" style="display:none">
       <thead>
         <tr>
           <th>Type</th>
@@ -56,7 +56,7 @@
         <td>0.7948 (51)</td>
       </tr>
     </table>
-	<p>Updated 29-Oct-2025 at 21:07 GMT</p>
+	<p>Updated 29-Oct-2025 at 23:15 GMT</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin=
   "anonymous"></script>
