--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   crossorigin="anonymous">
 </head>
 <body>
-  <div class="container">
-    <table class="table table-bordered table-striped" style="display:none">
+  <div id="table01" class="container">
+    <table class="table table-bordered table-striped">
       <thead>
         <tr>
           <th>Type</th>
@@ -22,43 +22,42 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>GER40</td>
+        <td>UKOIL</td>
         <td>Sell</td>
-        <td>23848 (302)</td>
-        <td>24245 (95)</td>
+        <td>62.75 (110)</td>
+        <td>64.68 (83)</td>
       </tr>
       <tr>
         <td>D1S</td>
-        <td>USDCHF</td>
-        <td>Buy</td>
-        <td>0.8049 (50)</td>
-        <td>0.7950 (49)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>EURUSD</td>
+        <td>USOIL</td>
         <td>Sell</td>
-        <td>1.1521 (80)</td>
-        <td>1.1668 (68)</td>
+        <td>58.78 (110)</td>
+        <td>60.87 (99)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>NZDCAD</td>
-        <td>Sell</td>
-        <td>0.7981 (50)</td>
-        <td>0.8086 (54)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>USDCHF</td>
+        <td>EURJPY</td>
         <td>Buy</td>
-        <td>0.8069 (70)</td>
-        <td>0.7948 (51)</td>
+        <td>179.36 (80)</td>
+        <td>177.53 (103)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>USDJPY</td>
+        <td>Buy</td>
+        <td>154.28 (50)</td>
+        <td>152.56 (44)</td>
       </tr>
     </table>
-	<p>Updated 29-Oct-2025 at 23:15 GMT</p>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin=
-  "anonymous"></script>
+  <p>Updated 30-Oct-2025 at 10:10 GMT</p>
+
+  <script>
+  el = document.getElementById('table01');
+  const d = new Date();
+  let hour = d.getHours();
+  if (hour < 20 || hour > 21) {
+  el.style.display = 'none'; }
+  </script>
 </body>
 </html>
