--- a/index.html
+++ b/index.html
@@ -22,36 +22,42 @@
       </thead>
       <tr>
         <td>D1S</td>
+        <td>EURUSD</td>
+        <td>Sell</td>
+        <td>1.1535 (30)</td>
+        <td>1.1628 (63)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
         <td>UKOIL</td>
         <td>Sell</td>
-        <td>62.75 (110)</td>
-        <td>64.68 (83)</td>
+        <td>62.82 (110)</td>
+        <td>64.68 (76)</td>
       </tr>
       <tr>
         <td>D1S</td>
         <td>USOIL</td>
         <td>Sell</td>
-        <td>58.78 (110)</td>
-        <td>60.87 (99)</td>
+        <td>58.96 (110)</td>
+        <td>60.87 (82)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>EURJPY</td>
-        <td>Buy</td>
-        <td>179.36 (80)</td>
-        <td>177.53 (103)</td>
+        <td>NZDUSD</td>
+        <td>Sell</td>
+        <td>0.5677 (60)</td>
+        <td>0.5801 (64)</td>
       </tr>
       <tr>
         <td>D1A</td>
         <td>USDJPY</td>
         <td>Buy</td>
-        <td>154.28 (50)</td>
-        <td>152.56 (44)</td>
+        <td>154.57 (50)</td>
+        <td>152.56 (151)</td>
       </tr>
     </table>
+    <p>Updated 30-Oct-2025 at 20:05 GMT</p>
   </div>
-  <p>Updated 30-Oct-2025 at 10:10 GMT</p>
-
   <script>
   el = document.getElementById('table01');
   const d = new Date();
