--- a/index.html
+++ b/index.html
@@ -43,20 +43,27 @@
       </tr>
       <tr>
         <td>D1A</td>
+        <td>EURJPY</td>
+        <td>Buy</td>
+        <td>179.04 (80)</td>
+        <td>177.53 (71)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
         <td>NZDUSD</td>
         <td>Sell</td>
-        <td>0.5677 (60)</td>
-        <td>0.5801 (64)</td>
+        <td>0.5680 (60)</td>
+        <td>0.5801 (61)</td>
       </tr>
       <tr>
         <td>D1A</td>
         <td>USDJPY</td>
         <td>Buy</td>
-        <td>154.57 (50)</td>
-        <td>152.56 (151)</td>
+        <td>154.56 (50)</td>
+        <td>152.56 (150)</td>
       </tr>
     </table>
-    <p>Updated 30-Oct-2025 at 20:05 GMT</p>
+    <p>Updated 30-Oct-2025 at 20:35 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
