--- a/index.html
+++ b/index.html
@@ -22,48 +22,34 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>EURUSD</td>
-        <td>Sell</td>
-        <td>1.1534 (30)</td>
-        <td>1.1628 (64)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>UKOIL</td>
-        <td>Sell</td>
-        <td>62.89 (110)</td>
-        <td>64.68 (70)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>USOIL</td>
-        <td>Sell</td>
-        <td>59.02 (110)</td>
-        <td>60.87 (76)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>EURJPY</td>
-        <td>Buy</td>
-        <td>179.03 (80)</td>
-        <td>177.53 (70)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
         <td>NZDUSD</td>
         <td>Sell</td>
-        <td>0.5680 (60)</td>
-        <td>0.5801 (61)</td>
+        <td>0.5692 (30)</td>
+        <td>0.5763 (41)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>USDCAD</td>
+        <td>Buy</td>
+        <td>1.4052 (30)</td>
+        <td>1.3964 (57)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>USDJPY</td>
+        <td>AUDUSD</td>
+        <td>Sell</td>
+        <td>0.6493 (50)</td>
+        <td>0.6597 (54)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>CHFJPY</td>
         <td>Buy</td>
-        <td>154.61 (50)</td>
-        <td>152.56 (155)</td>
+        <td>192.08 (50)</td>
+        <td>190.47 (110)</td>
       </tr>
     </table>
-    <p>Updated 30-Oct-2025 at 21:25 GMT</p>
+    <p>Updated 31-Oct-2025 at 20:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
