--- a/index.html
+++ b/index.html
@@ -21,34 +21,27 @@
         </tr>
       </thead>
       <tr>
-        <td>D1S</td>
-        <td>NZDUSD</td>
-        <td>Sell</td>
-        <td>0.5694 (30)</td>
-        <td>0.5763 (39)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>USDCAD</td>
+        <td>D1A</td>
+        <td>EURNZD</td>
         <td>Buy</td>
-        <td>1.4043 (30)</td>
-        <td>1.3964 (49)</td>
+        <td>2.0261 (80)</td>
+        <td>2.0114 (67)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>AUDUSD</td>
-        <td>Sell</td>
-        <td>0.6495 (50)</td>
-        <td>0.6597 (52)</td>
+        <td>GBPNZD</td>
+        <td>Buy</td>
+        <td>2.3097 (80)</td>
+        <td>2.2912 (105)</td>
       </tr>
     </table>
-    <p>Updated 31-Oct-2025 at 20:30 GMT</p>
+    <p>Updated 03-Nov-2025 at 21:15 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
   const d = new Date();
   let hour = d.getHours();
-  if (hour < 20 || hour > 21) {
+  if (hour < 21 || hour > 22) {
   el.style.display = 'none'; }
   </script>
 </body>
