--- a/index.html
+++ b/index.html
@@ -21,21 +21,49 @@
         </tr>
       </thead>
       <tr>
-        <td>D1A</td>
+        <td>D1S</td>
         <td>EURNZD</td>
         <td>Buy</td>
-        <td>2.0261 (80)</td>
-        <td>2.0114 (67)</td>
+        <td>2.0348 (30)</td>
+        <td>2.0148 (170)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>GBPNZD</td>
+        <td>EURGBP</td>
         <td>Buy</td>
-        <td>2.3097 (80)</td>
-        <td>2.2912 (105)</td>
+        <td>0.8869 (50)</td>
+        <td>0.8756 (63)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPCAD</td>
+        <td>Sell</td>
+        <td>1.8272 (80)</td>
+        <td>1.8418 (66)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPJPY</td>
+        <td>Sell</td>
+        <td>199.13 (80)</td>
+        <td>202.34 (242)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>NZDCHF</td>
+        <td>Sell</td>
+        <td>0.4527 (50)</td>
+        <td>0.4621 (43)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>NZDJPY</td>
+        <td>Sell</td>
+        <td>85.99 (80)</td>
+        <td>88.16 (137)</td>
       </tr>
     </table>
-    <p>Updated 03-Nov-2025 at 21:15 GMT</p>
+    <p>Updated 04-Nov-2025 at 20:15 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
