--- a/index.html
+++ b/index.html
@@ -22,48 +22,20 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>EURNZD</td>
+        <td>XAUUSD</td>
         <td>Buy</td>
-        <td>2.0349 (30)</td>
-        <td>2.0148 (171)</td>
+        <td>3993.0 (100)</td>
+        <td>3979.0 (40)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>EURGBP</td>
-        <td>Buy</td>
-        <td>0.8868 (50)</td>
-        <td>0.8762 (56)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>GBPCAD</td>
+        <td>GBPCHF</td>
         <td>Sell</td>
-        <td>1.8278 (80)</td>
-        <td>1.8418 (60)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>GBPJPY</td>
-        <td>Sell</td>
-        <td>199.23 (80)</td>
-        <td>202.34 (231)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>NZDCHF</td>
-        <td>Sell</td>
-        <td>0.4525 (50)</td>
-        <td>0.4621 (46)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>NZDJPY</td>
-        <td>Sell</td>
-        <td>85.98 (80)</td>
-        <td>88.16 (138)</td>
+        <td>1.0492 (80)</td>
+        <td>1.0624 (52)</td>
       </tr>
     </table>
-    <p>Updated 04-Nov-2025 at 21:30 GMT</p>
+    <p>Updated 05-Nov-2025 at 21:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
