--- a/index.html
+++ b/index.html
@@ -21,21 +21,28 @@
         </tr>
       </thead>
       <tr>
-        <td>D1S</td>
-        <td>XAUUSD</td>
-        <td>Buy</td>
-        <td>3993.8 (100)</td>
-        <td>3928.6 (552)</td>
+        <td>D1A</td>
+        <td>AUDCHF</td>
+        <td>Sell</td>
+        <td>0.5178 (50)</td>
+        <td>0.5280 (52)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>GBPCHF</td>
+        <td>CADCHF</td>
         <td>Sell</td>
-        <td>1.0492 (80)</td>
-        <td>1.0624 (52)</td>
+        <td>0.5665 (50)</td>
+        <td>0.5755 (40)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURUSD</td>
+        <td>Buy</td>
+        <td>1.1626 (80)</td>
+        <td>1.1504 (42)</td>
       </tr>
     </table>
-    <p>Updated 05-Nov-2025 at 21:20 GMT</p>
+    <p>Updated 06-Nov-2025 at 19:45 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
