--- a/index.html
+++ b/index.html
@@ -10,39 +10,7 @@
 </head>
 <body>
   <div id="table01" class="container">
-    <table class="table table-bordered table-striped">
-      <thead>
-        <tr>
-          <th>Type</th>
-          <th>Symbol</th>
-          <th>Buy or Sell</th>
-          <th>Target</th>
-          <th>Stop</th>
-        </tr>
-      </thead>
-      <tr>
-        <td>D1A</td>
-        <td>AUDCHF</td>
-        <td>Sell</td>
-        <td>0.5172 (50)</td>
-        <td>0.5280 (58)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>CADCHF</td>
-        <td>Sell</td>
-        <td>0.5660 (50)</td>
-        <td>0.5755 (45)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>EURUSD</td>
-        <td>Buy</td>
-        <td>1.1627 (80)</td>
-        <td>1.1504 (43)</td>
-      </tr>
-    </table>
-    <p>Updated 06-Nov-2025 at 21:05 GMT</p>
+  <h1>Header One</h1>
   </div>
   <script>
   el = document.getElementById('table01');
