--- a/index.html
+++ b/index.html
@@ -10,6 +10,60 @@
 </head>
 <body>
   <div id="table01" class="container">
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>Type</th>
+          <th>Symbol</th>
+          <th>Buy or Sell</th>
+          <th>Target</th>
+          <th>Stop</th>
+        </tr>
+      </thead>
+      <tr>
+        <td>D1S</td>
+        <td>CHFJPY</td>
+        <td>Buy</td>
+        <td>191.99 (60)</td>
+        <td>190.41 (98)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>EURJPY</td>
+        <td>Buy</td>
+        <td>178.69 (60)</td>
+        <td>177.11 (98)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>XAUUSD</td>
+        <td>Buy</td>
+        <td>4116.5 (30)</td>
+        <td>3978.1 (1354)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>AUDJPY</td>
+        <td>Buy</td>
+        <td>101.17 (50)</td>
+        <td>99.61 (106)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>CADJPY</td>
+        <td>Buy</td>
+        <td>110.35 (50)</td>
+        <td>108.78 (107)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>USDJPY</td>
+        <td>Buy</td>
+        <td>154.49 (50)</td>
+        <td>152.81 (118)</td>
+      </tr>
+    </table>
+    <p>Updated 10-Nov-2025 at 20:05 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
