--- a/index.html
+++ b/index.html
@@ -22,54 +22,75 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>CHFJPY</td>
-        <td>Buy</td>
-        <td>192.01 (60)</td>
-        <td>190.41 (100)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>EURJPY</td>
-        <td>Buy</td>
-        <td>178.70 (60)</td>
-        <td>177.11 (99)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>XAUUSD</td>
-        <td>Buy</td>
-        <td>4114.9 (30)</td>
-        <td>3978.1 (1338)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
         <td>AUDJPY</td>
         <td>Buy</td>
-        <td>101.21 (50)</td>
-        <td>99.61 (110)</td>
+        <td>101.14 (50)</td>
+        <td>99.91 (73)</td>
       </tr>
       <tr>
-        <td>D1A</td>
+        <td>D1S</td>
         <td>CADJPY</td>
         <td>Buy</td>
-        <td>110.37 (50)</td>
-        <td>108.78 (109)</td>
+        <td>110.52 (50)</td>
+        <td>109.16 (86)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>NZDJPY</td>
+        <td>Buy</td>
+        <td>87.51 (30)</td>
+        <td>86.62 (59)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>USDCHF</td>
+        <td>Sell</td>
+        <td>0.7962 (40)</td>
+        <td>0.8076 (74)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>USDJPY</td>
+        <td>Buy</td>
+        <td>154.43 (30)</td>
+        <td>153.60 (53)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>USDJPY</td>
+        <td>EURCHF</td>
+        <td>Sell</td>
+        <td>0.9224 (50)</td>
+        <td>0.9325 (51)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPAUD</td>
+        <td>Sell</td>
+        <td>2.0092 (80)</td>
+        <td>2.0221 (49)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPCHF</td>
+        <td>Sell</td>
+        <td>1.0459 (80)</td>
+        <td>1.0619 (80)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>NZDJPY</td>
         <td>Buy</td>
-        <td>154.55 (50)</td>
-        <td>152.81 (124)</td>
+        <td>88.00 (80)</td>
+        <td>86.48 (72)</td>
       </tr>
     </table>
-    <p>Updated 10-Nov-2025 at 21:15 GMT</p>
+    <p>Updated 11-Nov-2025 at 20:15 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
   const d = new Date();
   let hour = d.getHours();
-  if (hour < 20 || hour > 21) {
+  if (hour < 19 || hour > 21) {
   el.style.display = 'none'; }
   </script>
 </body>
