--- a/index.html
+++ b/index.html
@@ -22,62 +22,48 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>AUDJPY</td>
-        <td>Buy</td>
-        <td>101.12 (50)</td>
-        <td>99.91 (71)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>CADJPY</td>
-        <td>Buy</td>
-        <td>110.50 (50)</td>
-        <td>109.16 (84)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>USDCHF</td>
+        <td>GBPCAD</td>
         <td>Sell</td>
-        <td>0.7961 (40)</td>
-        <td>0.8076 (75)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>USDJPY</td>
-        <td>Buy</td>
-        <td>154.43 (30)</td>
-        <td>153.60 (53)</td>
+        <td>1.8440 (30)</td>
+        <td>1.8353 (57)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>EURCHF</td>
-        <td>Sell</td>
-        <td>0.9219 (50)</td>
-        <td>0.9325 (56)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>GBPAUD</td>
-        <td>Sell</td>
-        <td>2.0075 (80)</td>
-        <td>2.0221 (66)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>GBPCHF</td>
-        <td>Sell</td>
-        <td>1.0451 (80)</td>
-        <td>1.0619 (88)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>NZDJPY</td>
+        <td>AUDCAD</td>
         <td>Buy</td>
-        <td>87.95 (80)</td>
-        <td>86.48 (67)</td>
+        <td>0.9209 (50)</td>
+        <td>0.9103 (56)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURAUD</td>
+        <td>Sell</td>
+        <td>1.7618 (90)</td>
+        <td>1.7770 (62)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURGBP</td>
+        <td>Buy</td>
+        <td>0.8874 (50)</td>
+        <td>0.8763 (61)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPNZD</td>
+        <td>Sell</td>
+        <td>2.3084 (80)</td>
+        <td>2.3234 (70)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPUSD</td>
+        <td>Sell</td>
+        <td>1.3052 (80)</td>
+        <td>1.3184 (52)</td>
       </tr>
     </table>
-    <p>Updated 11-Nov-2025 at 21:20 GMT</p>
+    <p>Updated 12-Nov-2025 at 20:30 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
