--- a/index.html
+++ b/index.html
@@ -10,6 +10,46 @@
 </head>
 <body>
   <div id="table01" class="container">
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>Type</th>
+          <th>Symbol</th>
+          <th>Buy or Sell</th>
+          <th>Target</th>
+          <th>Stop</th>
+        </tr>
+      </thead>
+      <tr style="display:none">
+        <td>D1S</td>
+        <td>AUDCAD</td>
+        <td>Buy</td>
+        <td>0.9187 (30)</td>
+        <td>0.9139 (18)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURAUD</td>
+        <td>Buy</td>
+        <td>1.7914 (90)</td>
+        <td>1.7725 (99)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURNZD</td>
+        <td>Buy</td>
+        <td>2.0651 (80)</td>
+        <td>2.0474 (97)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPUSD</td>
+        <td>Buy</td>
+        <td>1.3275 (80)</td>
+        <td>1.3145 (50)</td>
+      </tr>
+    </table>
+    <p>Updated 13-Nov-2025 at 19:35 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
