--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
         </tr>
       </thead>
       <tr>
-        <td>D1A</td>
-        <td>EURAUD</td>
-        <td>Buy</td>
-        <td>1.7904 (90)</td>
-        <td>1.7726 (88)</td>
+        <td>D1S</td>
+        <td>GBPAUD</td>
+        <td>Sell</td>
+        <td>2.0071 (60)</td>
+        <td>2.0171 (40)</td>
       </tr>
       <tr>
-        <td>D1A</td>
-        <td>EURNZD</td>
-        <td>Buy</td>
-        <td>2.0653 (80)</td>
-        <td>2.0475 (98)</td>
+        <td>D1S</td>
+        <td>GBPNZD</td>
+        <td>Sell</td>
+        <td>2.3144 (30)</td>
+        <td>2.3271 (97)</td>
       </tr>
       <tr>
-        <td>D1A</td>
-        <td>GBPUSD</td>
-        <td>Buy</td>
-        <td>1.3267 (80)</td>
-        <td>1.3133 (54)</td>
+        <td>D1S</td>
+        <td>NAS100</td>
+        <td>Sell</td>
+        <td>24875 (251)</td>
+        <td>25644 (518)</td>
       </tr>
     </table>
-    <p>Updated 13-Nov-2025 at 21:30 GMT</p>
+    <p>Updated 14-Nov-2025 at 19:30 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
