--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <th>Stop</th>
         </tr>
       </thead>
-      <tr>
+      <tr style="display:none">
         <td>D1S</td>
         <td>GBPAUD</td>
         <td>Sell</td>
