--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
 </head>
 <body>
   <div id="table01" class="container">
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>Type</th>
+          <th>Symbol</th>
+          <th>Buy or Sell</th>
+          <th>Target</th>
+          <th>Stop</th>
+        </tr>
+      </thead>
+      <tr style="display:none">
+        <td>D1S</td>
+        <td>AUDCAD</td>
+        <td>Sell</td>
+        <td>0.9075 (40)</td>
+        <td>0.9157 (42)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>AUDUSD</td>
+        <td>Sell</td>
+        <td>0.6442 (50)</td>
+        <td>0.6532 (40)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>GBPCAD</td>
+        <td>Buy</td>
+        <td>1.8530 (50)</td>
+        <td>1.8423 (57)</td>
+      </tr>
+    </table>
+    <p>Updated 17-Nov-2025 at 21:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
