--- a/index.html
+++ b/index.html
@@ -20,29 +20,50 @@
           <th>Stop</th>
         </tr>
       </thead>
-      <tr style="display:none">
-        <td>D1S</td>
-        <td>AUDCAD</td>
-        <td>Sell</td>
-        <td>0.9075 (40)</td>
-        <td>0.9157 (42)</td>
-      </tr>
       <tr>
-        <td>D1S</td>
-        <td>AUDUSD</td>
-        <td>Sell</td>
-        <td>0.6442 (50)</td>
-        <td>0.6532 (40)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>GBPCAD</td>
+        <td>D1A</td>
+        <td>CADCHF</td>
         <td>Buy</td>
-        <td>1.8535 (50)</td>
-        <td>1.8423 (62)</td>
+        <td>0.5762 (50)</td>
+        <td>0.5655 (57)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURNZD</td>
+        <td>Sell</td>
+        <td>2.0360 (80)</td>
+        <td>2.0503 (63)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURUSD</td>
+        <td>Sell</td>
+        <td>1.1503 (80)</td>
+        <td>1.1624 (41)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPCAD</td>
+        <td>Sell</td>
+        <td>1.8311 (80)</td>
+        <td>1.8465 (74)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>GBPNZD</td>
+        <td>Buy</td>
+        <td>2.3128 (80)</td>
+        <td>2.3279 (71)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>USDCAD</td>
+        <td>Sell</td>
+        <td>1.3932 (50)</td>
+        <td>1.4030 (48)</td>
       </tr>
     </table>
-    <p>Updated 17-Nov-2025 at 21:30 GMT</p>
+    <p>Updated 18-Nov-2025 at 20:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
