--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
         <td>D1A</td>
         <td>CADCHF</td>
         <td>Buy</td>
-        <td>0.5762 (50)</td>
-        <td>0.5655 (57)</td>
+        <td>0.5767 (50)</td>
+        <td>0.5667 (50)</td>
       </tr>
       <tr>
         <td>D1A</td>
         <td>EURNZD</td>
         <td>Sell</td>
-        <td>2.0360 (80)</td>
-        <td>2.0503 (63)</td>
+        <td>2.0371 (80)</td>
+        <td>2.0511 (60)</td>
       </tr>
       <tr>
         <td>D1A</td>
         <td>EURUSD</td>
         <td>Sell</td>
-        <td>1.1503 (80)</td>
-        <td>1.1624 (41)</td>
+        <td>1.1502 (80)</td>
+        <td>1.1625 (43)</td>
       </tr>
-      <tr>
+      <tr style="display:none">
         <td>D1A</td>
         <td>GBPCAD</td>
         <td>Sell</td>
         <td>1.8311 (80)</td>
         <td>1.8465 (74)</td>
       </tr>
-      <tr>
+      <tr style="display:none">
         <td>D1A</td>
         <td>GBPNZD</td>
         <td>Buy</td>
@@ -60,10 +60,10 @@
         <td>USDCAD</td>
         <td>Sell</td>
         <td>1.3932 (50)</td>
-        <td>1.4030 (48)</td>
+        <td>1.4032 (50)</td>
       </tr>
     </table>
-    <p>Updated 18-Nov-2025 at 20:00 GMT</p>
+    <p>Updated 18-Nov-2025 at 21:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
