--- a/index.html
+++ b/index.html
@@ -21,42 +21,77 @@
         </tr>
       </thead>
       <tr>
-        <td>D1A</td>
+        <td>D1S</td>
         <td>CADCHF</td>
         <td>Buy</td>
-        <td>0.5767 (50)</td>
-        <td>0.5667 (50)</td>
+        <td>0.5792 (60)</td>
+        <td>0.5673 (59)</td>
       </tr>
       <tr>
-        <td>D1A</td>
-        <td>EURNZD</td>
+        <td>D1S</td>
+        <td>EURCAD</td>
         <td>Sell</td>
-        <td>2.0371 (80)</td>
-        <td>2.0511 (60)</td>
+        <td>1.6142 (60)</td>
+        <td>1.6264 (62)</td>
       </tr>
       <tr>
-        <td>D1A</td>
+        <td>D1S</td>
+        <td>EURCHF</td>
+        <td>Buy</td>
+        <td>0.9317 (30)</td>
+        <td>0.9229 (58)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>EURNZD</td>
+        <td>Buy</td>
+        <td>2.0655 (50)</td>
+        <td>2.0496 (109)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
         <td>EURUSD</td>
         <td>Sell</td>
-        <td>1.1502 (80)</td>
-        <td>1.1625 (43)</td>
+        <td>1.1506 (30)</td>
+        <td>1.1605 (69)</td>
       </tr>
       <tr>
-        <td>D1A</td>
+        <td>D1S</td>
         <td>GBPCAD</td>
         <td>Sell</td>
-        <td>1.8311 (80)</td>
-        <td>1.8465 (80)</td>
+        <td>1.8332 (30)</td>
+        <td>1.8429 (67)</td>
       </tr>
       <tr>
-        <td>D1A</td>
-        <td>USDCAD</td>
+        <td>D1S</td>
+        <td>GBPNZD</td>
+        <td>Buy</td>
+        <td>2.3389 (50)</td>
+        <td>2.3221 (118)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>GBPUSD</td>
         <td>Sell</td>
-        <td>1.3932 (50)</td>
-        <td>1.4032 (50)</td>
+        <td>1.3017 (60)</td>
+        <td>1.3146 (69)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>NZDCAD</td>
+        <td>Sell</td>
+        <td>0.7826 (40)</td>
+        <td>0.7938 (72)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>NZDUSD</td>
+        <td>Sell</td>
+        <td>0.5570 (30)</td>
+        <td>0.5663 (63)</td>
       </tr>
     </table>
-    <p>Updated 18-Nov-2025 at 21:20 GMT</p>
+    <p>Updated 19-Nov-2025 at 17:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
