--- a/index.html
+++ b/index.html
@@ -21,77 +21,21 @@
         </tr>
       </thead>
       <tr>
-        <td>D1S</td>
-        <td>CADCHF</td>
-        <td>Buy</td>
-        <td>0.5793 (60)</td>
-        <td>0.5673 (60)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>EURCAD</td>
-        <td>Sell</td>
-        <td>1.6142 (60)</td>
-        <td>1.6264 (62)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>EURCHF</td>
-        <td>Buy</td>
-        <td>0.9321 (30)</td>
-        <td>0.9229 (62)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>EURNZD</td>
-        <td>Buy</td>
-        <td>2.0645 (50)</td>
-        <td>2.0497 (98)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>EURUSD</td>
-        <td>Sell</td>
-        <td>1.1495 (30)</td>
-        <td>1.1605 (80)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
+        <td>D1A</td>
         <td>GBPCAD</td>
-        <td>Sell</td>
-        <td>1.8310 (30)</td>
-        <td>1.8429 (89)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>GBPNZD</td>
         <td>Buy</td>
-        <td>2.3358 (50)</td>
-        <td>2.3221 (87)</td>
+        <td>1.8543 (80)</td>
+        <td>1.8384 (79)</td>
       </tr>
       <tr>
-        <td>D1S</td>
-        <td>GBPUSD</td>
+        <td>D1A</td>
+        <td>NZDJPY</td>
         <td>Sell</td>
-        <td>1.2987 (60)</td>
-        <td>1.3146 (99)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>NZDCAD</td>
-        <td>Sell</td>
-        <td>0.7824 (40)</td>
-        <td>0.7938 (74)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>NZDUSD</td>
-        <td>Sell</td>
-        <td>0.5565 (30)</td>
-        <td>0.5663 (68)</td>
+        <td>86.95 (80)</td>
+        <td>88.84 (109)</td>
       </tr>
     </table>
-    <p>Updated 19-Nov-2025 at 21:15 GMT</p>
+    <p>Updated 21-Nov-2025 at 20:45 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
