--- a/index.html
+++ b/index.html
@@ -22,20 +22,13 @@
       </thead>
       <tr>
         <td>D1A</td>
-        <td>GBPCAD</td>
+        <td>AUDCAD</td>
         <td>Buy</td>
-        <td>1.8543 (80)</td>
-        <td>1.8384 (79)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>NZDJPY</td>
-        <td>Sell</td>
-        <td>86.95 (80)</td>
-        <td>88.84 (109)</td>
+        <td>0.9167 (50)</td>
+        <td>0.9055 (62)</td>
       </tr>
     </table>
-    <p>Updated 21-Nov-2025 at 20:45 GMT</p>
+    <p>Updated 24-Nov-2025 at 20:30 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
