--- a/index.html
+++ b/index.html
@@ -21,14 +21,35 @@
         </tr>
       </thead>
       <tr>
-        <td>D1A</td>
-        <td>AUDCAD</td>
+        <td>D1S</td>
+        <td>EURCAD</td>
         <td>Buy</td>
-        <td>0.9167 (50)</td>
-        <td>0.9055 (62)</td>
+        <td>1.6347 (30)</td>
+        <td>1.6229 (88)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>GBPUSD</td>
+        <td>Buy</td>
+        <td>1.3242 (30)</td>
+        <td>1.3114 (98)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>AUDNZD</td>
+        <td>Sell</td>
+        <td>1.1459 (50)</td>
+        <td>1.1571 (62)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURNZD</td>
+        <td>Buy</td>
+        <td>2.0664 (80)</td>
+        <td>2.0532 (52)</td>
       </tr>
     </table>
-    <p>Updated 24-Nov-2025 at 20:30 GMT</p>
+    <p>Updated 25-Nov-2025 at 20:30 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
