--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
         <td>D1S</td>
         <td>EURCAD</td>
         <td>Buy</td>
-        <td>1.6347 (30)</td>
-        <td>1.6229 (88)</td>
+        <td>1.6337 (30)</td>
+        <td>1.6229 (78)</td>
       </tr>
       <tr>
         <td>D1S</td>
         <td>GBPUSD</td>
         <td>Buy</td>
-        <td>1.3242 (30)</td>
-        <td>1.3114 (98)</td>
+        <td>1.3200 (30)</td>
+        <td>1.3114 (56)</td>
       </tr>
-      <tr>
+      <tr style="display:none">
         <td>D1A</td>
         <td>AUDNZD</td>
         <td>Sell</td>
         <td>1.1459 (50)</td>
         <td>1.1571 (62)</td>
       </tr>
-      <tr>
+      <tr style="display:none">
         <td>D1A</td>
         <td>EURNZD</td>
         <td>Buy</td>
@@ -49,7 +49,7 @@
         <td>2.0532 (52)</td>
       </tr>
     </table>
-    <p>Updated 25-Nov-2025 at 20:30 GMT</p>
+    <p>Updated 25-Nov-2025 at 21:30 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
