--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>EURCAD</td>
-        <td>Buy</td>
-        <td>1.6337 (30)</td>
-        <td>1.6229 (78)</td>
+        <td>EURAUD</td>
+        <td>Sell</td>
+        <td>1.7748 (40)</td>
+        <td>1.7853 (65)</td>
       </tr>
       <tr>
         <td>D1S</td>
-        <td>GBPUSD</td>
+        <td>EURUSD</td>
         <td>Buy</td>
-        <td>1.3200 (30)</td>
-        <td>1.3114 (56)</td>
+        <td>1.1635 (40)</td>
+        <td>1.1537 (58)</td>
       </tr>
-      <tr style="display:none">
-        <td>D1A</td>
-        <td>AUDNZD</td>
+      <tr>
+        <td>D1S</td>
+        <td>GBPNZD</td>
         <td>Sell</td>
-        <td>1.1459 (50)</td>
-        <td>1.1571 (62)</td>
+        <td>2.3200 (40)</td>
+        <td>2.3354 (114)</td>
       </tr>
-      <tr style="display:none">
-        <td>D1A</td>
-        <td>EURNZD</td>
+      <tr>
+        <td>D1S</td>
+        <td>NZDJPY</td>
         <td>Buy</td>
-        <td>2.0664 (80)</td>
-        <td>2.0532 (52)</td>
+        <td>89.34 (30)</td>
+        <td>87.92 (112)</td>
       </tr>
     </table>
-    <p>Updated 25-Nov-2025 at 21:30 GMT</p>
+    <p>Updated 26-Nov-2025 at 20:55 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
