--- a/index.html
+++ b/index.html
@@ -48,8 +48,36 @@
         <td>89.34 (30)</td>
         <td>87.92 (112)</td>
       </tr>
+      <tr>
+        <td>D1A</td>
+        <td>AUDJPY</td>
+        <td>Buy</td>
+        <td>102.47 (50)</td>
+        <td>101.09 (88)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURAUD</td>
+        <td>Sell</td>
+        <td>1.7698 (90)</td>
+        <td>1.7865 (77)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURJPY</td>
+        <td>Buy</td>
+        <td>182.20 (80)</td>
+        <td>180.55 (85)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>NZDJPY</td>
+        <td>Buy</td>
+        <td>89.87 (80)</td>
+        <td>87.78 (129)</td>
+      </tr>
     </table>
-    <p>Updated 26-Nov-2025 at 20:55 GMT</p>
+    <p>Updated 26-Nov-2025 at 21:15 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
