--- a/index.html
+++ b/index.html
@@ -22,62 +22,34 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>EURAUD</td>
+        <td>USDCAD</td>
         <td>Sell</td>
-        <td>1.7748 (40)</td>
-        <td>1.7853 (65)</td>
+        <td>1.3990 (40)</td>
+        <td>1.4082 (52)</td>
       </tr>
-      <tr>
+      <tr style="display:none">
         <td>D1S</td>
-        <td>EURUSD</td>
-        <td>Buy</td>
-        <td>1.1635 (40)</td>
-        <td>1.1537 (58)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>GBPNZD</td>
+        <td>USDCHF</td>
         <td>Sell</td>
-        <td>2.3200 (40)</td>
-        <td>2.3354 (114)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>NZDJPY</td>
-        <td>Buy</td>
-        <td>89.34 (30)</td>
-        <td>87.92 (112)</td>
+        <td>0.7999 (50)</td>
+        <td>0.8067 (18)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>AUDJPY</td>
+        <td>CADJPY</td>
         <td>Buy</td>
-        <td>102.47 (50)</td>
-        <td>101.09 (88)</td>
+        <td>111.92 (50)</td>
+        <td>110.97 (45)</td>
       </tr>
       <tr>
         <td>D1A</td>
-        <td>EURAUD</td>
-        <td>Sell</td>
-        <td>1.7698 (90)</td>
-        <td>1.7865 (77)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>EURJPY</td>
+        <td>CHFJPY</td>
         <td>Buy</td>
-        <td>182.20 (80)</td>
-        <td>180.55 (85)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>NZDJPY</td>
-        <td>Buy</td>
-        <td>89.87 (80)</td>
-        <td>87.78 (129)</td>
+        <td>194.67 (50)</td>
+        <td>193.70 (47)</td>
       </tr>
     </table>
-    <p>Updated 26-Nov-2025 at 21:15 GMT</p>
+    <p>Updated 27-Nov-2025 at 21:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
