--- a/index.html
+++ b/index.html
@@ -22,34 +22,27 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>USDCAD</td>
-        <td>Sell</td>
-        <td>1.3990 (40)</td>
-        <td>1.4082 (52)</td>
-      </tr>
-      <tr style="display:none">
-        <td>D1S</td>
-        <td>USDCHF</td>
-        <td>Sell</td>
-        <td>0.7999 (50)</td>
-        <td>0.8067 (18)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
         <td>CADJPY</td>
         <td>Buy</td>
-        <td>111.92 (50)</td>
-        <td>110.97 (45)</td>
+        <td>112.27 (50)</td>
+        <td>111.02 (75)</td>
       </tr>
       <tr>
-        <td>D1A</td>
-        <td>CHFJPY</td>
-        <td>Buy</td>
-        <td>194.67 (50)</td>
-        <td>193.70 (47)</td>
+        <td>D1S</td>
+        <td>EURCAD</td>
+        <td>Sell</td>
+        <td>1.6169 (30)</td>
+        <td>1.6267 (68)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>GBPAUD</td>
+        <td>Sell</td>
+        <td>2.0161 (50)</td>
+        <td>2.0311 (100)</td>
       </tr>
     </table>
-    <p>Updated 27-Nov-2025 at 21:00 GMT</p>
+    <p>Updated 28-Nov-2025 at 21:45 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
