--- a/index.html
+++ b/index.html
@@ -22,27 +22,34 @@
       </thead>
       <tr>
         <td>D1S</td>
-        <td>CADJPY</td>
+        <td>UKOIL</td>
         <td>Buy</td>
-        <td>112.27 (50)</td>
-        <td>111.02 (75)</td>
+        <td>63.70 (50)</td>
+        <td>62.25 (95)</td>
       </tr>
       <tr>
         <td>D1S</td>
-        <td>EURCAD</td>
-        <td>Sell</td>
-        <td>1.6169 (30)</td>
-        <td>1.6267 (68)</td>
+        <td>USOIL</td>
+        <td>Buy</td>
+        <td>59.71 (40)</td>
+        <td>58.35 (96)</td>
       </tr>
       <tr>
-        <td>D1S</td>
-        <td>GBPAUD</td>
+        <td>D1A</td>
+        <td>CHFJPY</td>
         <td>Sell</td>
-        <td>2.0161 (50)</td>
-        <td>2.0311 (100)</td>
+        <td>192.73 (50)</td>
+        <td>194.08 (85)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>EURJPY</td>
+        <td>Sell</td>
+        <td>179.72 (80)</td>
+        <td>181.07 (55)</td>
       </tr>
     </table>
-    <p>Updated 28-Nov-2025 at 21:45 GMT</p>
+    <p>Updated 1-Dec-2025 at 21:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
