--- a/index.html
+++ b/index.html
@@ -10,7 +10,74 @@
 </head>
 <body>
   <div id="table01" class="container">
-    <p>Updated 3-Dec-2025 at 21:00 GMT</p>
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>Type</th>
+          <th>Symbol</th>
+          <th>Buy or Sell</th>
+          <th>Target</th>
+          <th>Stop</th>
+        </tr>
+      </thead>
+      <tr>
+        <td>D1S</td>
+        <td>AUDNZD</td>
+        <td>Buy</td>
+        <td>1.1514 (50)</td>
+        <td>1.1423 (41)</td>
+      </tr>
+      <tr style="display:none">
+        <td>D1S</td>
+        <td>CADJPY</td>
+        <td>Sell</td>
+        <td>110.77 (50)</td>
+        <td>111.70 (43)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>CHFJPY</td>
+        <td>Sell</td>
+        <td>192.47 (50)</td>
+        <td>193.81 (84)</td>
+      </tr>
+      <tr style="display:none">
+        <td>D1S</td>
+        <td>EURCAD</td>
+        <td>Buy</td>
+        <td>181.91 (80)</td>
+        <td>180.40 (71)</td>
+      </tr>
+      <tr style="display:none">
+        <td>D1S</td>
+        <td>EURGBP</td>
+        <td>Buy</td>
+        <td>1.8699 (80)</td>
+        <td>1.8479 (140)</td>
+      </tr>
+      <tr>
+        <td>D1S</td>
+        <td>GBPCAD</td>
+        <td>Buy</td>
+        <td>1.8646 (40)</td>
+        <td>1.8516 (90)</td>
+      </tr>
+      <tr>
+        <td>D1A</td>
+        <td>CADCHF</td>
+        <td>Buy</td>
+        <td>0.5806 (50)</td>
+        <td>0.5716 (40)</td>
+      </tr>
+      <tr style="display:none">
+        <td>D1A</td>
+        <td>EURCHF</td>
+        <td>Buy</td>
+        <td>0.9407 (50)</td>
+        <td>0.9308 (48)</td>
+      </tr>
+    </table>
+    <p>Updated 4-Dec-2025 at 20:00 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
