--- a/index.html
+++ b/index.html
@@ -31,43 +31,43 @@
         <td>D1S</td>
         <td>CADJPY</td>
         <td>Sell</td>
-        <td>110.77 (50)</td>
-        <td>111.70 (43)</td>
+        <td>111.41 (40)</td>
+        <td>110.70 (31)</td>
       </tr>
       <tr>
         <td>D1S</td>
         <td>CHFJPY</td>
         <td>Sell</td>
-        <td>192.47 (50)</td>
-        <td>193.81 (84)</td>
+        <td>192.41 (50)</td>
+        <td>193.81 (90)</td>
       </tr>
       <tr style="display:none">
         <td>D1S</td>
         <td>EURCAD</td>
         <td>Buy</td>
-        <td>181.91 (80)</td>
-        <td>180.40 (71)</td>
+        <td>1.6278 (30)</td>
+        <td>1.6242 (6)</td>
       </tr>
-      <tr style="display:none">
+      <tr>
         <td>D1S</td>
         <td>EURGBP</td>
-        <td>Buy</td>
-        <td>1.8699 (80)</td>
-        <td>1.8479 (140)</td>
+        <td>Sell</td>
+        <td>1.8703 (30)</td>
+        <td>0.8773 (40)</td>
       </tr>
       <tr>
         <td>D1S</td>
         <td>GBPCAD</td>
         <td>Buy</td>
-        <td>1.8646 (40)</td>
-        <td>1.8516 (90)</td>
+        <td>1.8642 (40)</td>
+        <td>1.8516 (86)</td>
       </tr>
       <tr>
         <td>D1A</td>
         <td>CADCHF</td>
         <td>Buy</td>
-        <td>0.5806 (50)</td>
-        <td>0.5716 (40)</td>
+        <td>0.5807 (50)</td>
+        <td>0.5716 (41)</td>
       </tr>
       <tr style="display:none">
         <td>D1A</td>
@@ -77,7 +77,7 @@
         <td>0.9308 (48)</td>
       </tr>
     </table>
-    <p>Updated 4-Dec-2025 at 20:00 GMT</p>
+    <p>Updated 4-Dec-2025 at 20:40 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
