--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <td>1.6278 (30)</td>
         <td>1.6242 (6)</td>
       </tr>
-      <tr>
+      <tr style="display:none">
         <td>D1S</td>
         <td>EURGBP</td>
         <td>Sell</td>
@@ -77,7 +77,7 @@
         <td>0.9308 (48)</td>
       </tr>
     </table>
-    <p>Updated 4-Dec-2025 at 20:40 GMT</p>
+    <p>Updated 4-Dec-2025 at 21:05 GMT</p>
   </div>
   <script>
   el = document.getElementById('table01');
