--- a/index.html
+++ b/index.html
@@ -5,78 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Bootstrap Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-  crossorigin="anonymous">
-</head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"></head>
 <body>
   <div id="table01" class="container">
-    <table class="table table-bordered table-striped">
-      <thead>
-        <tr>
-          <th>Type</th>
-          <th>Symbol</th>
-          <th>Buy or Sell</th>
-          <th>Target</th>
-          <th>Stop</th>
-        </tr>
-      </thead>
-      <tr>
-        <td>D1S</td>
-        <td>AUDNZD</td>
-        <td>Buy</td>
-        <td>1.1514 (50)</td>
-        <td>1.1423 (41)</td>
-      </tr>
-      <tr style="display:none">
-        <td>D1S</td>
-        <td>CADJPY</td>
-        <td>Sell</td>
-        <td>111.41 (40)</td>
-        <td>110.70 (31)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>CHFJPY</td>
-        <td>Sell</td>
-        <td>192.41 (50)</td>
-        <td>193.81 (90)</td>
-      </tr>
-      <tr style="display:none">
-        <td>D1S</td>
-        <td>EURCAD</td>
-        <td>Buy</td>
-        <td>1.6278 (30)</td>
-        <td>1.6242 (6)</td>
-      </tr>
-      <tr style="display:none">
-        <td>D1S</td>
-        <td>EURGBP</td>
-        <td>Sell</td>
-        <td>1.8703 (30)</td>
-        <td>0.8773 (40)</td>
-      </tr>
-      <tr>
-        <td>D1S</td>
-        <td>GBPCAD</td>
-        <td>Buy</td>
-        <td>1.8642 (40)</td>
-        <td>1.8516 (86)</td>
-      </tr>
-      <tr>
-        <td>D1A</td>
-        <td>CADCHF</td>
-        <td>Buy</td>
-        <td>0.5807 (50)</td>
-        <td>0.5716 (41)</td>
-      </tr>
-      <tr style="display:none">
-        <td>D1A</td>
-        <td>EURCHF</td>
-        <td>Buy</td>
-        <td>0.9407 (50)</td>
-        <td>0.9308 (48)</td>
-      </tr>
-    </table>
     <p>Updated 4-Dec-2025 at 21:05 GMT</p>
   </div>
   <script>
